less hacky Hard code CDN URL for Fosdem.

--- a/dj/main/templates/final_file_audio.html
+++ b/dj/main/templates/final_file_audio.html
@@ -6,10 +6,13 @@
 
 <a href="{% url episode episode.id %}">
     <h3>{{episode.name}}</h3>
-    {# <img src ="{{MEDIA_URL}}{{episode.show.client.slug}}/{{episode.show.slug}}/webm/{{episode.slug}}_audio.png" alt="final audio"><br/> #}
     {# hack to use fosdem files: #}
-  <img src ="http://964bdd2f965bbc4ca8f5-3ebaa0e988d98119a4fead51a26da83a.r42.cf2.rackcdn.com/veyepar/{{episode.show.client.slug}}/{{episode.show.slug}}/webm/{{episode.slug}}_audio.png" alt="final audio"><br/>
-  {# <img src ="http://veyepar.{{episode.show.client.bucket_id}}.cdn.nextdayvideo.com/veyepar/{{episode.show.client.slug}}/{{episode.show.slug}}/mp4/{{episode.slug}}_audio.png" alt="final audio"><br/> #}
+  {% if episode.show.slug == "fosdem_2014" %}
+     <img src ="http://964bdd2f965bbc4ca8f5-3ebaa0e988d98119a4fead51a26da83a.r42.cf2.rackcdn.com/veyepar/{{episode.show.client.slug}}/{{episode.show.slug}}/webm/{{episode.slug}}_audio.png" alt="final audio">
+  {% else %}
+    <img src ="{{MEDIA_URL}}{{episode.show.client.slug}}/{{episode.show.slug}}/webm/{{episode.slug}}_audio.png" alt="final audio"><br/>
+  {% endif %}
+    <br/>
     </a>
     {{episode.comment}}
     </p>
