Option to slim down amount of detail on the full schedule.

--- a/dj/main/templates/schedule.html
+++ b/dj/main/templates/schedule.html
@@ -27,11 +27,13 @@
             <td style="white-space:normal;">
             {% if episode %}
 <a style="background-color:{{episode.released|yesno:"#70ff70,#ff0000,#cccccc"}};" href="E/{{episode.id}}/">[_] {{ episode.name }}</a>
-              {# <a href="{{episode.description}}/">{{ episode.conf_url }}</a> {{ episode.duration }} #}
-              {{episode.authors}}
-              D: {{ episode.duration }} 
-              E: {{ episode.end|date:"H:i" }} 
-              {% if episode.emails %} [..] {% endif %}
+              {% if not blank_me %}
+                  {# <a href="{{episode.description}}/">{{ episode.conf_url }}</a> {{ episode.duration }} #}
+                  {{episode.authors}}
+                  D: {{ episode.duration }} 
+                  E: {{ episode.end|date:"H:i" }} 
+                  {% if episode.emails %} [..] {% endif %}
+              {% endif %}
             {% endif %}
             </td>
           {% endfor %}
