add real playtime of encoded video.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -58,6 +58,9 @@
         {%endfor%}
     </td>
 </tr>
+<tr>
+    <td>Total cuts_time</td><td>{{ episode.cuts_time }}</td>
+</tr>
 
 </tbody>
 </table>
