don't import blank email addresses.

--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -10,6 +10,7 @@ TEST1{{request.path}}
 <table class=tpick>
 <tr class=row1><td><a href="{% url start_here %}">Start Here</a></td></tr>
 <tr class=row1><td><a href="{% url clients %}">Clients</a></td></tr>
+<tr class=row1><td><a href="{% url locations %}">Locations</a></td></tr>
 <tr class=row1><td><a href="{% url tests %}">Tests</a></td></tr>
 </table>
 
